Added: Material design settings Added: New settings app Added: Groups, the ability to send snaps to a predefined group of people Added: Ability to add a texture to the caption text Added: Ability to add a gradient to caption text Added: Visual feedback when a option is tapped in the options panel Fixed: Donation message should not show if you've donated via google play. Otherwise it should show when ever you update SnapColors Fixed: SnapColors options panel in snapchat would have very small buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="title_activity_snap_colors">SnapColors</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">SnapColors</string>
-    <string name="title_activity_donate">SnapColors - Support Me</string>
+    <string name="title_activity_donate">Support Me</string>
+    <string name="title_activity_about">About</string>
+    <string name="title_activity_editgroups">Groups</string>
 </resources>
